fix(NewWords): made max width of editable text to prevent overflowing

--- a/src/components/Ricorda/components/NewWords/NewWords.css
+++ b/src/components/Ricorda/components/NewWords/NewWords.css
@@ -23,6 +23,10 @@
   margin-bottom: 0;
 }
 
+.new-words-editable-text {
+  max-width: 30vw;
+}
+
 .new-words-page-add-btn {
   margin-top: 20px;
   border-radius: 15px;
